# ChangeLog for dev-python/python-novaclient
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/python-novaclient/ChangeLog,v 1.31 2015/07/08 20:48:12 zlogene Exp $

  08 Jul 2015; Mikle Kolyada <zlogene@gentoo.org>
  python-novaclient-2.23.0.ebuild:
  x86 stable wrt bug #554114

  07 Jul 2015; Mikle Kolyada <zlogene@gentoo.org>
  python-novaclient-2.23.0.ebuild:
  amd64 stable wrt bug #554114

  07 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add github to remote-id in metadata.xml

  03 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add pypi to remote-id in metadata.xml

*python-novaclient-2.25.0 (13 May 2015)

  13 May 2015; Matthew Thode <prometheanfire@gentoo.org>
  +python-novaclient-2.25.0.ebuild:
  bup

*python-novaclient-2.23.0 (30 Apr 2015)

  30 Apr 2015; Matthew Thode <prometheanfire@gentoo.org>
  +python-novaclient-2.23.0.ebuild, -python-novaclient-9999.ebuild:
  bup

  08 Apr 2015; Michał Górny <mgorny@gentoo.org> python-novaclient-9999.ebuild:
  Drop old Python implementations

*python-novaclient-2.20.0 (18 Nov 2014)

  18 Nov 2014; Matthew Thode <prometheanfire@gentoo.org>
  +python-novaclient-2.20.0.ebuild:
  bup for cinder

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org>
  python-novaclient-9999.ebuild:
  QA: drop trailing '.' from DESCRIPTION

  01 Aug 2014; Matthew Thode <prometheanfire@gentoo.org>
  -python-novaclient-2.15.0.ebuild:
  removing old

  06 Jul 2014; Michał Górny <mgorny@gentoo.org> python-novaclient-2.15.0.ebuild,
  python-novaclient-2.17.0-r1.ebuild, python-novaclient-2.17.0.ebuild,
  python-novaclient-9999.ebuild:
  Clean up obsolete dependencies on virtual/python-argparse and virtual/python-
  unittest2 (those packages were only required for <=python-2.6).

*python-novaclient-2.17.0-r1 (12 May 2014)

  12 May 2014; Matthew Thode <prometheanfire@gentoo.org>
  +python-novaclient-2.17.0-r1.ebuild:
  updating for new fun
