@@ -4,20 +4,29 @@ Hash: SHA256
 DIST python-novaclient-2.17.0.tar.gz 230712 SHA256 af6f46890715eb5f4e0d25a714effbbac8da020715f81b1572a301c5e9887197 SHA512 6493aadab5589fb2a02c4a1440cd3f71e6918688ba634a89101c7c7b10aaa6600d8511097b07679f5927746c3463584287a0d7602a47397f169697a944b6a731 WHIRLPOOL d7523bee3ad59e40e021177cd98dff5a91136ea3ee56e2844857dced5b9af7a2bb47c5880d9fe0d35e4de9a022864c88e009b71ca762dea84eb139ff5b99cad1
 DIST python-novaclient-2.20.0.tar.gz 267956 SHA256 73fc8169d58e910340aae1ac5370c3b63a9943f748e2a20e4a1dfd7277525c86 SHA512 a1ff87b46d1520346380bf5396383d84e036892f1568d2eb201eb667837919e1cd8db3267a1ea9f6dfc616de0714374c81465de76b8a9bfec32c4742eeee3807 WHIRLPOOL 1fb3052d3fa457524c65b3de087a7cf7377d274b7a9d924529289e2e2b02992c5182cd1ec5aeef443a81c8e1d08fa1202caf6c5e12e3df40b5011f75df0837f8
 DIST python-novaclient-2.23.0.tar.gz 224690 SHA256 0f82e723b1cef48df75d4b47ece7dd6ee980563628d8cfbef10cd35707193e07 SHA512 38f7aa5747c9cea2e8e98ec91e18ada70c1cd61b0236285a6335cff2a90ff465963d648489fec8c4bb96e55e4c8f2c77ddbae58d42e43807e1d0d70f4bdfe9fe WHIRLPOOL 883b5e04ec39e525fea8c22969a72a8fc334c741b2419e3a4cab9f2f6563286dc6968615b7df7a17d2ab4e17de5d182163eb60682fd69bfa84312629d2ea731d
+DIST python-novaclient-2.23.1.tar.gz 225659 SHA256 8a8b0ace401099518ab852b294f89199a9358085b51ffa0e52dfd05c2332e09e SHA512 a3ac753a4cac5e769cef59e6ae8d182f0abfe03b9ff10fa8a34b1d395fd5a83e92e999af644d1248417700654a6e3b3cb3d9818044c4c258d06304d99738a978 WHIRLPOOL 99a38df0e76f8c18c7bea23154c9b4641fe1b9a2086493a0ee2807c151173be21b8f18b27a48231991cca10ffbc32f2fa26bf265d30baa8c310a654c7557c30d
 DIST python-novaclient-2.25.0.tar.gz 228156 SHA256 433e314223218031e7ea6e71baa54c1b13485d47fbb128ed3752e2a72ad7cb83 SHA512 b65495e94da9d42aa6eb51090ea7c2af6784e74121ea96c7021d013b8570af1df90d993df332b92274d5f92bc634149ad14616804e68e93fb4529b6b15dbb5c4 WHIRLPOOL 7401147c278a23768e18998b90842c6c17fe2c9dfb28cd320dfe0dc6ce7afd2e0481d6275deb82a4ce5c3ac826b8303390a8d80c011a242c4bed0fff2e446615
 EBUILD python-novaclient-2.17.0-r1.ebuild 1609 SHA256 2b7fcbc792227bfc9e9f48f1ffaaba48faf0bbcace4bb2bf4b1d1a683b880310 SHA512 0a06e12d006c57b26a57aa1bd4fc60c294ec8bd219c5388b8713a802993f3ce776fa5b1eab17cbdf243c93057e9c42ddf0783294b772bbe9b0dff586398ef1c8 WHIRLPOOL 7f235e94121d3b57d0df659a8cb598379cb7cc28a0461bd263e6e752831e236eefd72110fea3990f93f320c1c76fbd09d72a9a9424140d0337916bd2a83f402b
 EBUILD python-novaclient-2.17.0.ebuild 1822 SHA256 9ce419c7e75cd3c5cebc65ac1e2722c72b54fd04d21a29dc1e2954775e1dd3a2 SHA512 fc2d6193fef309efd288865d8eb5e09aaba12ce513e245fb299379df693dbeee64075db93e943888df4bae241ef79b0d94c69a9b550bfa0bac760cecb2920dca WHIRLPOOL 639260dd63950491ef847647da4daae45aa596fe59bd6172a7313114f88f9e7230fc3c8d77a93332f7f3c1252f7ce88a0b23a34c6da1d412b7d999a7a5649310
 EBUILD python-novaclient-2.20.0.ebuild 2026 SHA256 5e446964cb92d52cecb8f01c90ae361210480f4bc55be0f1471a9154c8623d0a SHA512 f2f335e49612b469bde98e075526d7938b17709e927e449849c13d5535d475833ca05704cf0baa32d738cd0fcb1e8e585ed97380b932189cc32ab0dce543f7f7 WHIRLPOOL ad8d4a98dff373a78133abcfd6d89fced15d8f542e548f84f5dbb232b5368cd6b669b9ceb1d72a4e7c83e043ddac52b32178c404866693529d42abc5ac03eb95
 EBUILD python-novaclient-2.23.0.ebuild 2328 SHA256 b707bfe4b38ffa0cc4a39e2e13312bbac05aec068778be5f9fbc3007e462452a SHA512 8b492f862cc8fbc2d13b1303b83828dbeb95a55101958be1bbe1caaf24d158593a2e57cc7beea5601a8f867ad2b01e174195bbcce4dc37c7659985fb11df83db WHIRLPOOL 54a4d32d5dbc7e68ffa07a8de3fa6e4ea1db65fc71dc362ff173e62b930dbe5e9d3f4ede252eed98773e1c5f4cd7bba48799bc00b01e46e75418579cd1b3d530
+EBUILD python-novaclient-2.23.1.ebuild 2494 SHA256 4e86e757a720f05b0cb67e6a4f7f36d18db02c6a7dc64251c7aa86e1bf3101e2 SHA512 eca7d3ddde323c5a88ce47ab38b623e82c582bef6d6c01233c244e9c54fdd0f4da57a4ab116bfb09e80bd03ed32104aa8c46fe075e232596ff3a37af670ebf82 WHIRLPOOL c46c034bbb7c7fea61d0a868bdbdeb7f823b0f15360d3402b8042a871f8388c8ea66e1502578bcd423b700a491ab9f33d73565cca2295ced637cb98dc1525a60
 EBUILD python-novaclient-2.25.0.ebuild 2291 SHA256 88dcac69352c9eb947e7cd9d65dd76a32dd6fa65c1115243dc0f0ed903122d20 SHA512 370e440c3e1308807f7a8841e57b84b3088397512207c46e5c7d29642f13d626c93b5770baf580bf5e40984b41f0799c32af771012df22f006c9a65c6795bcf3 WHIRLPOOL 59212029c7533e615b9ca2b24ab0b4c25a9c7dd1eb35a73ee89ccbc4ec1b27f098d1dff646ce0633b71062cd1fd6c56855734ec67818c5489963b95318b37437
-MISC ChangeLog 5431 SHA256 f638dd3f8a8d1ec71108e44d056af4d226331bf504395d784964961501a99587 SHA512 c60e93f3a74019498a6a84afc2ef50cd6ee80aa39bc228de25f2132eae722d9fd417923a910ba582752bd453d21efaa18a871b0919f52a092c072a99d3704a0b WHIRLPOOL 10b3805cdce1bc9b46610899c21bb9943d192e7987ab9be79ce3cc8ca453c9914e459b1f810450155fd12e5cc629e4a02e945010c7c4f573de6ea2ab5158b2c1
+MISC ChangeLog 5579 SHA256 5bb8603b43145e6382704748800649269b302769691517e8d0ea9b2005c7d725 SHA512 965f12ab56ccf227cdedc6b1951ae33b7b7fd0a03f14d19127ae9d46946a66a8b735bb8a89dc25656613b880a4902a25389f66c0517642953b526974d007748f WHIRLPOOL 2a51a577c26d3c719eed54b170a8a7c2dc7b2d9bc343bfcf02bb9f0331e41f2c3a8090653992171eb73506bda3cee9ed60bec2f7e10024cbba0b35f0eb696c8f
 MISC metadata.xml 641 SHA256 2bc46c3446580a43af6f433ce320820c6264af27d5d7681c730301824c72677f SHA512 c8ce8d1502943085684172e24706a1bf727d34561fad92252555f1859493deff7ec11967458a58d5f55a37d2a892fea2c14a818911d0508bc0a4341ad65cbbf8 WHIRLPOOL 5f5b0c2d335cb4767b61b89cbd7042df45056fdb444e147acd42b4b6c2ba8661f1979165afc62b247cdbb176c7849d0ed7f81e91243f6d380489d847a0e135f8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
 
-iJwEAQEIAAYFAlWdjAYACgkQG9wOWsQutdbCyQP9FLEzyz3tHbJDnhpvik+KmaT+
-Z8fR86VEaGImGehkbWuTbJojXVuyUPeFXtwRLVu1beKbJpn9RuhpVSU5AFpz3uqq
-KUH5cJuxc9ptMFR0TH4VEnX4do3dJPNtaC/18XoEXmFk8lAYTTf/r8aaznRtC30e
-NLgIH/Pbf/Y/1jdYkRQ=
-=gNvS
+iQIcBAEBCAAGBQJVsGIwAAoJEGSje+quGaToqasQALFzGWYb7MLuIC8lYHDMgRgA
+t03eJL2L+HESkDn8jeEoVrFIMUEbXg6nNy40xdO22/sdHqoh8rjaKVu2P/I8XhVb
+lMyN2trsltbNdtj3u3UEFWkLTU9/4rtHJ1E7O9gV9Bv0otqsb9dBfS6o4G4AsFgp
+Z9AUsbvLSYS6nQCZRCvMtsmCZCcJfTGGts8/Rwdd8SZDCoQn6tkkJVNOraSsYYKT
+De82B+8Zq5ugvzv5bzmGA0vwCKksypu3Qtg+hWmZ8itZ9E+RJAzAHyAxGNjsh3dm
+HjzeNA8oPv+9zTCWRlNzYjWxX0CdUICR5xSNayOPgKn5OMOE6WFpGonn6GltTzy0
+YfWilSW72p0MVH6Cf1n9QzqZgPESiVgVANJViJ3UhVUyVHQAGMlbnMxKjJqjMNQH
+LVHZmLDkenYXyEThkQnGDzeOiyyqVth8jWLzqEjj9pYT/47RD+7GEyt+FZCa6Z2v
+Ow9QTd7sa626Fax874nrmA/8iMZzi4VHIDtQfYQ5061WKiuJNGmLTLYwvY9LRe0E
+Y1cKYwld1rH1tZlGmNYFLDcrvNCDpRqmRbLWi7pdQw6q4YhTNnHjzyyGOtdy1anW
+IrV3KDCJ4+XWcGdk4YmI9VGkyTH2aYZXwwTCfbWTKcC7lCCnj/GFn0ROu5FUvSUD
+oCLovVU0uhKZ9t+0HIiE
+=rLb5
 -----END PGP SIGNATURE-----
